...
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_gravity="center"
            android:text="@string/picture" />

        <Button
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/picture"
            android:padding="20dp"
...
