...
) {

    companion object {
        const val KEY_FRAGMENT = "fragment"
        const val FRAGMENT_RESIZE = "resize" // default
        const val FRAGMENT_RESIZE_HIDDEN = "resize-hidden"
        const val FRAGMENT_SCROLL = "scroll"
        const val FRAGMENT_POOLING_CONTAINER = "pooling-container"
        const val FRAGMENT_OCCLUSIONS_HIDDEN = "occlusions-hidden"
        const val FRAGMENT_USER_INTERACTIONS = "user-interactions"

        const val KEY_MEDIATION = "mediation"
        const val MEDIATION_TYPE_NON_MEDIATED = "non-mediated" // default
...
